fix to startswith and contains filter